--- a/src/main/resources/com/maniacobra/pyzzle/views/exercise-view.fxml
+++ b/src/main/resources/com/maniacobra/pyzzle/views/exercise-view.fxml
@@ -35,6 +35,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.SplitPane?>
@@ -46,7 +47,7 @@
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
 
-<AnchorPane fx:id="anchorPane" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.maniacobra.pyzzle.controllers.ExerciseController">
+<AnchorPane fx:id="anchorPane" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.maniacobra.pyzzle.controllers.ExerciseController">
    <children>
       <SplitPane dividerPositions="0.7630260521042084" prefHeight="-1.0" prefWidth="-1.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
@@ -131,7 +132,7 @@
                         </ScrollPane>
                      </children>
                   </VBox>
-                  <VBox alignment="TOP_CENTER" prefHeight="298.0" prefWidth="238.0">
+                  <VBox alignment="TOP_CENTER" prefHeight="298.0" prefWidth="238.0" spacing="6.0">
                      <children>
                         <HBox alignment="CENTER" prefHeight="0.0" prefWidth="158.0" spacing="10.0">
                            <children>
@@ -181,12 +182,12 @@
                               <Font size="14.0" />
                            </font>
                         </Text>
-                        <Separator orientation="VERTICAL" prefHeight="200.0" visible="false" />
-                        <Button fx:id="buttonSolution" disable="true" focusTraversable="false" mnemonicParsing="false" onAction="#displaySolution" text="Voir la solution">
+                        <Button fx:id="buttonSolution" disable="true" focusTraversable="false" mnemonicParsing="false" onAction="#displaySolution" prefHeight="31.0" prefWidth="120.0" text="Voir la solution">
                            <VBox.margin>
-                              <Insets bottom="10.0" />
+                              <Insets bottom="10.0" top="50.0" />
                            </VBox.margin>
                         </Button>
+                        <Label fx:id="labelUserName" text="-" />
                      </children>
                      <padding>
                         <Insets left="5.0" right="5.0" />
