--- a/src/main/resources/com/maniacobra/pyzzle/views/main-view.fxml
+++ b/src/main/resources/com/maniacobra/pyzzle/views/main-view.fxml
@@ -1,31 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.scene.control.ToolBar?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.MenuButton?>
-
 <BorderPane fx:id="borderPane" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.maniacobra.pyzzle.controllers.MainController">
    <top>
       <ToolBar prefWidth="238.0" BorderPane.alignment="CENTER">
          <items>
-            <MenuButton styleClass="mbutton" mnemonicParsing="false" text="Fichier">
+            <MenuButton mnemonicParsing="false" styleClass="mbutton" text="Fichier">
                <items>
                   <MenuItem mnemonicParsing="false" onAction="#menuOpenFile" text="Ouvrir..." />
                   <MenuItem fx:id="menuItemSave" disable="true" mnemonicParsing="false" onAction="#menuSave" text="Enregistrer sous..." />
                   <MenuItem fx:id="menuItemQuickSave" disable="true" mnemonicParsing="false" onAction="#menuQuickSave" text="Enregistrer" />
                </items>
             </MenuButton>
-            <Button styleClass="mbutton" mnemonicParsing="false" onAction="#menuSettings" text="Préférences" />
-            <Button styleClass="mbutton" mnemonicParsing="false" onAction="#menuAbout" text="À propos" />
+            <Button mnemonicParsing="false" onAction="#menuSettings" styleClass="mbutton" text="Préférences" />
+            <Button mnemonicParsing="false" onAction="#menuAbout" styleClass="mbutton" text="À propos" />
          </items>
       </ToolBar>
 
