--- a/src/main/resources/com/maniacobra/pyzzle/views/main-view.fxml
+++ b/src/main/resources/com/maniacobra/pyzzle/views/main-view.fxml
@@ -12,15 +12,20 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="borderPane" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.maniacobra.pyzzle.controllers.MainController">
+<BorderPane fx:id="borderPane" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <ToolBar prefWidth="238.0" BorderPane.alignment="CENTER">
          <items>
-            <MenuButton mnemonicParsing="false" styleClass="mbutton" text="Fichier">
+            <MenuButton mnemonicParsing="false" onMouseEntered="#updateFileMenu" styleClass="mbutton" text="Fichier">
                <items>
                   <MenuItem mnemonicParsing="false" onAction="#menuOpenFile" text="Ouvrir..." />
                   <MenuItem fx:id="menuItemSave" disable="true" mnemonicParsing="false" onAction="#menuSave" text="Enregistrer sous..." />
                   <MenuItem fx:id="menuItemQuickSave" disable="true" mnemonicParsing="false" onAction="#menuQuickSave" text="Enregistrer" />
+               </items>
+            </MenuButton>
+            <MenuButton mnemonicParsing="false" onMouseEntered="#updateFileMenu" styleClass="mbutton" text="Outils d'enseignant">
+               <items>
+                  <MenuItem mnemonicParsing="false" onAction="#menuAnalysis" text="Analyser des fichiers de rendus" />
                </items>
             </MenuButton>
             <Button mnemonicParsing="false" onAction="#menuSettings" styleClass="mbutton" text="Préférences" />
